# DS-FS-2026

./: README.md
Source Code/: CMakeLists.txt  main  main.cpp
Supermarket Catalog/1) Planification/: .$Planification by UC.drawio.bkp  Planification by UC.drawio
Supermarket Catalog/2) Design/: SC Class Diagram.drawio
Supermarket Catalog/3) Code/SupermarketCatalog/: CMakeLists.txt
UNO/Documentation/: Class Diagram UNO.drawio
UNO/SourceCode/: CMakeLists.txt
UNO/SourceCode/include/card_game/application/card_creator/: CardCreator.h
UNO/SourceCode/include/card_game/application/engine/: Engine.h
UNO/SourceCode/include/card_game/application/match/: Match.h  MatchConfig.h
UNO/SourceCode/include/card_game/application/shuffle/: Shuffle.h
UNO/SourceCode/include/card_game/core/card_creator/: CardCreator.cpp
UNO/SourceCode/include/card_game/core/data_input/: DataInput.h
UNO/SourceCode/include/card_game/core/data_structures/: DataStructure.h
UNO/SourceCode/include/card_game/core/data_structures/circular_list/: CircularList.h
UNO/SourceCode/include/card_game/core/data_structures/double_linked_list/: DoubleLinkedList.h  DoubleNode.h
UNO/SourceCode/include/card_game/core/data_structures/linked_list/: LinkedList.h  SimpleNode.h
UNO/SourceCode/include/card_game/core/data_structures/stack/: Stack.h
UNO/SourceCode/include/card_game/core/enums/Cards/: CardColor.h
UNO/SourceCode/include/card_game/core/enums/cards/: CardColor.h  CardValue.h  CardsLimit.h
UNO/SourceCode/include/card_game/core/utilities/: Utilities.h
UNO/SourceCode/include/card_game/domain/card/: Card.h  ColorWildCard.h  FlipCard.h  NumberCard.h  ReverseCard.h  SkipCard.h  TheftCard.h
UNO/SourceCode/include/card_game/domain/deck/: Deck.h
UNO/SourceCode/include/card_game/domain/player/: Player.h
UNO/SourceCode/include/card_game/infrastructure/cards/: CardsView.h
UNO/SourceCode/include/card_game/infrastructure/game/: Game.h
UNO/SourceCode/include/card_game/infrastructure/menu/: Menu.h
UNO/SourceCode/include/card_game/infrastructure/options/: Options.h
UNO/SourceCode/resources/: design.txt
UNO/SourceCode/src/: main.cpp
UNO/SourceCode/src/application/card_creator/: CardCreator.cpp
UNO/SourceCode/src/application/engine/: Engine.cpp
UNO/SourceCode/src/application/match/: Match.cpp  MatchConfig.cpp
UNO/SourceCode/src/application/shuffle/: Shuffle.cpp
UNO/SourceCode/src/core/data_input/: DataInput.cpp
UNO/SourceCode/src/core/data_structures/: DataStructure.cpp
UNO/SourceCode/src/core/data_structures/linked_list/: LinkedList.cpp
UNO/SourceCode/src/core/exceptions/: InvalidCardException.cpp  LinkedListException.cpp  UserInputException.cpp
UNO/SourceCode/src/core/utilities/: Utilities.cpp
UNO/SourceCode/src/domain/card/: Card.cpp  ColorWildCard.cpp  FlipCard.cpp  NumberCard.cpp  ReverseCard.cpp  SkipCard.cpp  TheftCard.cpp
UNO/SourceCode/src/domain/deck/: Deck.cpp
UNO/SourceCode/src/domain/player/: Player.cpp
UNO/SourceCode/src/infrastructure/cards/: CardsView.cpp
UNO/SourceCode/src/infrastructure/game/: Game.cpp
UNO/SourceCode/src/infrastructure/menu/: Menu.cpp
UNO/SourceCode/src/infrastructure/options/: Options.cpp
